src/test/compile-fail/alt-vec-invalid-2.rs
fn main() {
    match ~[] {
        [_, ..tail, _] => {}, //~ ERROR: expected `]` but found `,`
        _ => ()
    }
}
